--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "vant": "^2.2.16",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
